--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/joinpursuit/Pursuit-Core-CSS-Intro-Lab#readme",
   "devDependencies": {
-    "cypress": "9.7.0",
     "cypress-watch-and-reload": "1.10.3",
     "live-server": "1.1.0"
+  },
+  "dependencies": {
+    "cypress": "^10.6.0"
   }
 }
